United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7092278 "jmap -finalizerinfo" throws "sun.jvm.hotspot.utilities.AssertionFailure: invalid cp index 0 137"
7092278 : "jmap -finalizerinfo" throws "sun.jvm.hotspot.utilities.AssertionFailure: invalid cp index 0 137"

Details
Type:
Bug
Submit Date:
2011-09-19
Status:
Closed
Updated Date:
2012-12-05
Project Name:
JDK
Resolved Date:
2011-11-28
Component:
hotspot
OS:
generic
Sub-Component:
svc
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs22,6u27
Fixed Versions:
hs22

Related Reports
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
"jmap -finalizerinfo" stopped working on Solaris and Linux

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/hsx/hsx22/hotspot/rev/34d69affce86
                                     
2011-10-13
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/cb315dc80374
                                     
2011-09-29
EVALUATION

This is a bug in the changes for 7086585.

diff -r 35c656d0b685 agent/src/share/classes/sun/jvm/hotspot/oops/InstanceKlass.java
--- a/agent/src/share/classes/sun/jvm/hotspot/oops/InstanceKlass.java
+++ b/agent/src/share/classes/sun/jvm/hotspot/oops/InstanceKlass.java
@@ -557,7 +557,7 @@
   /** Field access by name. */
   public Field findLocalField(Symbol name, Symbol sig) {
     TypeArray fields = getFields();
-    int length = (int) fields.getLength();
+    int length = (int) javaFieldsCount();
     ConstantPool cp = getConstants();
     for (int i = 0; i < length; i++) {
       Symbol f_name = getFieldName(i);
                                     
2011-09-19



Hardware and Software, Engineered to Work Together